--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 github: noobanon
 ko_fi: noobanon
-custom: <p align='center'>   <a href="https://t.me/FakeMasked"> <img src="https://img.shields.io/badge/Owner-noobanon-red?style=for-the-badge&logo=telegram" /></a> </p>
+custom: ["http://t.me/FakeMasked"]
